WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
296550
RenderThemeCocoa.mm error: no matching function for call to 'floorToDevicePixel'
https://bugs.webkit.org/show_bug.cgi?id=296550
Summary
RenderThemeCocoa.mm error: no matching function for call to 'floorToDevicePixel'
Gerald Squelart
Reported
2025-07-27 20:53:58 PDT
In file included from DerivedSources/WebCore/unified-sources/UnifiedSource54-mm.mm:2: Source/WebCore/rendering/cocoa/RenderThemeCocoa.mm:130:26: error: no matching function for call to 'floorToDevicePixel' 130 | auto outlineOffset = floorToDevicePixel(box.style().outlineOffset(), deviceScaleFactor); | ^~~~~~~~~~~~~~~~~~ In file included from DerivedSources/WebCore/unified-sources/UnifiedSource54-mm.mm:1: In file included from Source/WebCore/rendering/AttachmentLayout.mm:27: In file included from Source/WebCore/rendering/AttachmentLayout.h:30: In file included from Source/WebCore/platform/graphics/FloatRect.h:30: In file included from Source/WebCore/platform/LengthBox.h:24: In file included from Source/WebCore/platform/BoxExtents.h:28: Source/WebCore/platform/LayoutUnit.h:652:14: note: candidate function not viable: no known conversion from 'Style::Length<>' to 'LayoutUnit' for 1st argument 652 | inline float floorToDevicePixel(LayoutUnit value, float pixelSnappingFactor) | ^ ~~~~~~~~~~~~~~~~ Source/WebCore/platform/LayoutUnit.h:664:14: note: candidate function not viable: no known conversion from 'Style::Length<>' to 'float' for 1st argument 664 | inline float floorToDevicePixel(float value, float pixelSnappingFactor) { return floorToDevicePixel(LayoutUnit(value), pixelSnappingFactor); } | ^ ~~~~~~~~~~~ Probably due to
https://bugs.webkit.org/show_bug.cgi?id=296522
rdar://156874446
Attachments
Add attachment
proposed patch, testcase, etc.
Gerald Squelart
Comment 1
2025-07-27 20:58:12 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/48588
EWS
Comment 2
2025-07-27 23:41:29 PDT
Committed
297912@main
(99b502816d9a): <
https://commits.webkit.org/297912@main
> Reviewed commits have been landed. Closing PR #48588 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug