Fix iOS build where floorToDevicePixel is called with a Style::Length<> https://bugs.webkit.org/show_bug.cgi?id=296550 rdar://156874446

Reviewed by Simon Fraser.

floorToDevicePixel accepts a float, which is just the data member inside
Style::Length<>.

* Source/WebCore/rendering/cocoa/RenderThemeCocoa.mm:
(WebCore::drawFocusRingForPathForVectorBasedControls):

Canonical link: https://commits.webkit.org/297912@main